ui/styles.css
/* ... */
.vampire-roll .dice-rolls .roll.d10 {
  background-image: url("/icons/svg/d10-grey.svg");
}
.vampire-roll .dice-rolls .roll.d12 {
  background-image: url("/icons/svg/d12-grey.svg");
}
.vampire-roll .dice-rolls .roll.d20 {
  background-image: url("/icons/svg/d20-grey.svg");
}
.vampire-roll .dice-rolls .roll.min {
  color: #aa0200;
  filter: sepia(0.5) hue-rotate(-60deg);
}
.vampire-roll .dice-rolls .roll.max {
  color: #18520b;
  filter: sepia(0.5) hue-rotate(60deg);
}
.vampire-roll .dice-rolls .roll.discarded,
.vampire-roll .dice-rolls .roll.rerolled {
  filter: sepia(0.5) contrast(0.75) opacity(0.4);
}
.vampire-roll .dice-rolls .roll.exploded:before {
  font-size: 8px;
  font-family: "Font Awesome 5 Free";
  content: "\f666";
  position: absolute;
  top: -8px;
  right: 0px;
}
.vampire-roll .dice-rolls .roll.success {
  color: #18520b;
  filter: sepia(0.5) hue-rotate(60deg);
}
.vampire-roll .dice-rolls .roll.failure {
  color: #aa0200;
  filter: sepia(0.5) hue-rotate(-60deg);
}

@keyframes fade-tooltip {
  from {
    margin-left: 100%;
    width: 300%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

.vtm20.sheet span.item-tooltip{
  position: absolute;
  right: 0.2rem;
  bottom: 1.4rem;
  background: #333;
  border-radius: 0.2rem;
  color: white;
  width: 200px;
  cursor: default;
  display: block;
  opacity: 0;
  pointer-events: none;
  transition-property: opacity, display;
  transition-timing-function: ease-out;
  transition-duration: 0s;
  transition-delay: 0s;
}
.vtm20.sheet span.item-value:hover span.item-tooltip {
  opacity: 1;
  transition-duration: 0.2s;
  transition-delay: 1s;
}

.vtm20.sheet span.item-tooltip > * {
  padding: 0.2rem;
  margin: 0;
}

